@@ -2671,6 +2671,14 @@ of the cry will deliver more damaging blows.  The affect wears off \
 when battle is concluded, or if battle is not joined swiftly enough \
 after the cry is made.
 
+SHARPEN=WEAPON_SHARPENING
+WEAPON_SHARPENING=<ABILITY>\
+Usage    : SHARPEN [WEAPON NAME]\n\r\
+Example  : sharpen sword\n\r\
+The fighter sharpens the slashing or piercing weapon so that it will \
+give a slight damage bonus during use.  The weapon will remain sharp \
+until it takes too much wear damage in combat.
+
 DRAGONBREATH=\
 Ability    : Dragonbreath\n\r\
 Parameters : acid, fire, cold, lightning, or gas\n\r\
